Change Log for lwip
=================================
2019-01-21
	* Fix freertos echo server compilation on emaclite platform.
2019-01-11
	* Upgrage to lwip211
	* Fix cache handling in RX path for GEM
2018-10-01
	* Fix warning for redefining BYTE_ORDER
2018-09-19
	* In lwip tcl to support hierarchical designs pass -hier option to
	  get_cells command.
2018-08-24
	* Modify update_axi_ethernet_topology func(lwip202.tcl) to derive
	  interrupt source order programmatically. It fixes build error
	  due to change in HSI get_connected_intr_cntrl API output.
2018-03-30
	* Add AXI 2.5G Ethernet support
2018-03-29
	* Add mcdma support and handle IEEE_1588 for SGMII Phy in ethernet
	* header
2018-03-05
	* Add Hot plug detect support for EmacPS and AXI Ethernet
2018-03-14
	* Avoid axi ethernet config intialize in two places.
2018-01-19
	* Add support for Realtek RTL8211 phy.
2018-01-11
	* Use UINTPTR for axidma baseaddr.
2018-01-10
	* Update xInsideISR flag in emacps_error_handler.
2017-12-06
	* Fix jumbo frame checks to work on R5
2017-11-01
        * Perform AXI DMA lookup based on base address.
2017-10-27
	* Correct proper references of TX BD ring in init_dma() and
	  emacps_error_handler().
2017-10-04
	* Include options to configure mbox in lwip202.mld and lwip202.tcl
2017-10-13
	* Add multicast MAC update for IPv6 in xemacpsif.c and xaxiemacif.c
	* Add IPv6 source in lwip.makefile
2017-09-20
	* Disable L1 prefetch for ARMv8 in init_axi_dma function in xaxiemacif_dma.c.
2017-09-12
	* Disable L1 prefetch for ARMv8 in init_dma function in xemacpsif_dma.c.
2017-09-09
	* Add rx_reset_nodata workaround for Zynq GEM for freertos.
2017-08-29
	* Add support of IGMP in emacps
2017-08-17
	* Upgrade to LWIP2.0.2 version.
	* Removed PPC References
2017-08-14
	* Dont perform data cache related operations when CCI is
	  enabled.
2017-08-11
	* Fix for conflicting types for xInsideISR. Fixes CR-981909.
	* Fix for warnings in lwip141 axiethernet adapter.
2017-08-03